syntax = "proto3";

package pb.users;

option go_package = "truenorth/go/pb/users";

import "google/protobuf/timestamp.proto";

enum UserStatus {
  ACTIVE = 0;
  INACTIVE = 1;
}


message User {
  int64 id = 1;
  string username = 2;
  google.protobuf.Timestamp createdAt = 3;
  google.protobuf.Timestamp updatedAt = 4;
  UserStatus status = 5;
}